--- a/index style.css
+++ b/index style.css
@@ -21,7 +21,7 @@ header{
     width: 40px;
     height: 40px;
     flex: 0 0 auto;}
-img{
+.img-logo{
     width: 100%;
     height: 100%;}
 .name{
@@ -152,6 +152,9 @@ margin-bottom: 20px;}
 /* skills section end */
 
 /* Education section starts */
+.img-edu{
+    width: 100%;
+    height: 100%;}
 .cards{
     padding: 80px 250px;
     text-align: center;}
@@ -191,6 +194,9 @@ margin-bottom: 20px;}
 /* Education section end */
 
 /* Experience section starts */
+.img-exp{
+    width: 100%;
+    height: 100%;}
 .cards{
     padding: 80px 250px;
     text-align: center;}
