--- a/index style.css
+++ b/index style.css
@@ -13,10 +13,12 @@ header{
     display: flex;
     justify-content:space-between;
     align-items: center;
-    padding: 10px 150px;}
+    padding: 0px 150px;
+    margin: 0;}
 .logo{
     display: flex;
-    align-items: center;}
+    align-items: center;
+    justify-content: space-between;}
 .pic{
     width: 40px;
     height: 40px;
@@ -44,7 +46,7 @@ header{
     color: rgba(190, 110, 19, 1);
     text-decoration: underline;
     font-size: 1.3em;
-    transform: scale(1.6);}
+    transform: scale(1.1);}
     /* navbar end */
 
 /* hero section starts */
@@ -317,3 +319,129 @@ ul{
     border-top: 10px solid;
     opacity: 0.15;
     border-radius: 50%;}
+
+    
+@media (max-width: 1024px) {
+    .navigation .nav-tooggle{
+        display: none;
+        margin-left: 100px; ;}
+    header{
+        font-size: 12px !important;
+        margin: 4px !important;
+        padding: 5px 58px;
+        display: flex;
+        justify-content: flex-start;}
+    
+    .first{
+            margin-left: 150px !important;
+            padding: 0 !important;
+            font-size: 0.75em !important;
+            align-items: normal;}
+    section h1{
+        display: inline-block;
+        width: 100% !important;
+        padding: 4px;
+        margin: 10px;
+        border-radius: 4px;
+        font-size: 20px !important;}
+    
+        .cards-skills{
+            margin-left: 150px !important;
+            padding: 0 !important;
+            font-size: 0.75em !important;
+            align-items: normal;}
+    
+    .cards {
+        margin-left: 150px !important;
+        padding: 0 !important;
+        font-size: 0.75em !important;
+        align-items: normal;
+         
+    }
+    .cards .content{
+        display: flex;
+        flex-direction: column;
+        width: 100px;
+        height: 200px;
+        padding: 3px 3px !important;
+        margin-left: 0px !important;
+        padding: 0 !important;
+        font-size: 1px !important;
+        align-items: start;
+        justify-content: flex-start;
+        flex-wrap: wrap; 
+        margin-right: 40px;
+    }
+    
+    .card{
+        width: 200px;
+        height: 800px;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        margin-left: 5px !important;
+        padding: 0 !important;
+        align-items: center; 
+        justify-content: center;
+    margin-right: 0;}
+   
+    .card .description h5 span{
+    font-size: 10px !important;
+       
+        }
+   .img-edu{
+    width: auto;
+    height: auto;
+   } 
+    
+   .img-exp{
+width: 300px;
+height: 340px;
+margin-right: 650px;
+   }
+.work{
+    font-size: 10px;}
+.card1{
+width: 400px;
+height: 340px;}
+
+.content-proj{
+width: 100px;
+height: 100px;
+display: flex;
+justify-content: space-between;
+align-items: center;
+padding: 20px;
+flex-wrap: wrap;
+flex-direction: column;
+margin: 0;
+}
+.img-proj{
+    width: 30px;
+    height: 30px;
+}
+
+.description-proj h5{
+    font-size: 10px;
+}
+    
+.cards-proj{
+    margin-top: 20px;
+    margin-left: 100px !important;
+    padding: 40px !important;
+    font-size: 0.55em !important;
+    align-items: normal;
+    justify-content: space-between;
+}
+.photo-proj{
+    padding:0 10px;
+}
+
+
+
+
+
+
+
+
+}
