--- a/index style.css
+++ b/index style.css
@@ -298,8 +298,7 @@ ul{
     flex: 0 0 auto;}
     .logo-fo img{
         width: 100%;
-        height: 100%;
-    }
+        height: 100%; }
 .text-fo{
     text-align: center;
     margin-top: 4px;
@@ -321,25 +320,121 @@ ul{
     *{
         margin: 0 !important;
         padding: 0;
-        text-align: center;
-    }
+        text-align: center;}
+    /* hero section starts */
     .begin{
-        
-    }
+        background-position: left;
+        background-size:contain;
+        background-position-x:300px;
+        padding: 5% !important;
+        padding-top: 40% !important;}
+    .hero-word{
+        text-align: right;
+        font-size: 0.7em;
+        padding-bottom: 100px !important;
+        text-align: center;}
+    .cc{
+        margin-bottom: 20px !important;}
+    #hero-word{
+        line-height: 2;}
+    .social{
+        line-height: 4 !important;}
+    /* hero section end */
+    /* about section starts */
     .first{
-            margin-left: 150px !important;
-            padding: 0 !important;
-            font-size: 0.75em !important;
-            align-items: normal;}
-    section h1{
-        display: inline-block;
-        width: 100% !important;
-        padding: 4px;
-        margin: 10px;
-        border-radius: 4px;
-        font-size: 20px !important;}
+        margin-left: 0px !important;
+        padding: 50px !important;
+        font-size: 0.75em !important;}
+    #ww{
+    padding: 30px 0;}
+    /* about section end */
+
+    /* skills section starts */
+    #Skills{
+        margin-left: 0px !important;
+        padding: 50px !important;
+        font-size: 0.75em !important;
+        line-height: 5;}
+    /* skills section end */
+
+     /* Education section starts */ 
+    .content{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        flex-wrap: wrap;
+        margin-left: -175px !important;}
+    #Education h1{
+        display: flex;
+        justify-content: center;
+        font-size: 1.2em;
+        margin-left: -100px !important;
+        margin-bottom: 40px !important;}
+    .card{
+        margin-bottom: 20px !important;
+        width: auto;}
+    .description{
+        margin-top: 20px !important;}
+    /* Education section end */ 
+
+    /* Experience section starts */ 
+    #Experience h1{
+        display: flex;
+        justify-content: center;
+        font-size: 1.2em;
+        margin-left: -100px !important;
+        margin-bottom: 40px !important;}
+    #Experience .container{
+        width: 330px;
+        font-size: 10px;
+        margin-left: -190px !important;}
+    .description1 .company{
+        margin-top: 20px !important;}
+    #Experience .itg{
+        width: 300px;
+        height: 330px;}
+    /* Experience section end */
     
-        .cards-skills{
+    /* Project section starts */ 
+    #Projects h1{
+        display: flex;
+        justify-content: space-between;
+        font-size: 1.2em;
+        margin-left:0px !important;
+        margin-right: -40px !important;
+        margin-bottom: 40px !important;}
+    #Projects h5{
+            font-size: 10px;
+        margin-top: 20px !important;}
+    .card-proj{
+            width: 250px !important;
+            padding-left: 5px;
+            margin-left:20px !important;
+          overflow-wrap: break-word;
+          align-items: center}
+
+    hr{padding-left: 200px;}
+
+    #Contact .social{
+        display: flex;
+        justify-content: space-between;
+        font-size: 10px;
+        margin: 40px !important;}
+    .text-fo{
+        margin-top: 4px;
+        font-size: 1em;}
+    #Contact{margin: -60px !important;}
+    
+        }
+
+
+
+
+
+
+
+/*     
+         .cards-skills{
             margin-left: 150px !important;
             padding: 0 !important;
             font-size: 0.75em !important;
@@ -410,9 +505,10 @@ margin: 0;
     font-size: 0.55em !important;
     align-items: normal;
     justify-content: space-between;
+    text-align: left;
 }
 .photo-proj{
     padding:0 10px;
-}
+} */
 
-}
+};
